--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -16,14 +16,14 @@
   identifier = "publications"
   url = "/publications/"
 
-  [[main]]
-  name = "Talks"
-  weight = 400
-  identifier = "talks"
-  url = "/talks/"
+  # [[main]]
+  # name = "Talks"
+  # weight = 400
+  # identifier = "talks"
+  # url = "/talks/"
 
-  [[main]]
-  name = "Teaching"
-  weight = 510
-  identifier = "teaching"
-  url = "/teaching/"
+  # [[main]]
+  # name = "Teaching"
+  # weight = 510
+  # identifier = "teaching"
+  # url = "/teaching/"
