Add teaching section

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -22,8 +22,8 @@
   # identifier = "talks"
   # url = "/talks/"
 
-  # [[main]]
-  # name = "Teaching"
-  # weight = 510
-  # identifier = "teaching"
-  # url = "/teaching/"
+  [[main]]
+  name = "Teaching"
+  weight = 510
+  identifier = "teaching"
+  url = "/teaching/"
