--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,7 +3,7 @@ title = "Alina Dubovskaya"
 author = "Alina Dubovskaya"
 #copyright = "2020-2021"
 description = "Applied Mathematician"
-profilePicture = "images/profile.jpg"
+profilePicture = "images/profile.png"
 keywords = ""
 favicon = "favicons/"
 # example ["css/custom.css"]
